--- a/index.html
+++ b/index.html
@@ -3,12 +3,29 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Document</title>
+	<title>To Do List</title>
 	<link rel="stylesheet" href="css/style.css">
 </head>
 <body>
 	<div class="wrapper">
-		<div class="todo"></div>
+		<div class="todo">
+			<h1 class="todo__title">To Do List</h1>
+			<div class="todo__form">
+				<h2 class="form__title">My To Do List</h2>
+				<form action="#" class="form">
+					<input type="text" id="todo" name="todo" placeholder="Titles..." class="form__input">
+					<button type="button" class="form__btn">Add</button>
+				</form>
+			</div>
+			<ul class="todo__list">
+				<li class="done">Hit the gym <span class="close">&times;</span></li>
+				<li>Pay bills <span class="close">&times;</span></li>
+				<li>Meet George <span class="close">&times;</span></li>
+				<li>Buy eggs <span class="close">&times;</span></li>
+				<li>Read a book <span class="close">&times;</span></li>
+				<li>Organize office <span class="close">&times;</span></li>
+			</ul>
+		</div>
 	</div>
 	<script src="js/script.js"></script>
 </body>
