write js script

--- a/index.html
+++ b/index.html
@@ -14,12 +14,12 @@
 				<h2 class="form__title">My To Do List</h2>
 				<form action="#" class="form">
 					<input type="text" id="todo" name="todo" placeholder="Titles..." class="form__input">
-					<button type="button" class="form__btn">Add</button>
+					<button type="submit" class="form__btn">Add</button>
 				</form>
 			</div>
 			<ul class="todo__list">
-				<li class="done">Hit the gym <span class="close">&times;</span></li>
-				<li>Pay bills <span class="close">&times;</span></li>
+				<li>Hit the gym <span class="close">&times;</span></li>
+				<li class="done">Pay bills <span class="close">&times;</span></li>
 				<li>Meet George <span class="close">&times;</span></li>
 				<li>Buy eggs <span class="close">&times;</span></li>
 				<li>Read a book <span class="close">&times;</span></li>
